kube/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nodejs-api
spec:
    type: LoadBalancer
    ports:
        - name: http
          port: 3000
          protocol: TCP
          targetPort: 3000
    selector:
        app: nodejs-api
